--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="./assets/images/Group 96.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Happy New Year</h1>
+    <div class="container ">
+        <h1 class="py-5 circle mt-5">Happy New Year</h1>
+    </div>
 </body>
 </html>
