--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year (First Assignment)</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/images/Group 96.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/website.png" type="image/x-icon">
 </head>
 <body>
-    <div class="container ">
+    <!-- <div class="container ">
         <h1 class="py-5 circle mt-5">Happy New Year</h1>
-    </div>
+    </div> -->
+    <header></header>
+
+    <main>
+        <!-- banner-section  -->
+        <section class="py-5">
+            <div class="container banner">
+                <div class="banner-content">
+                    <h3 class="banner-title">Happy New Year</h3>
+                    <h1 class="banner-message">New Year Party <br> Celebration</h1>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer></footer>
 </body>
 </html>
