--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             </div>
         </section>
 
+
+        <!-- discount section  -->
+        <section class="py-5">
+            <div class="container">
+                
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
