--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
             </div>
         </section>
 
-
         <!-- discount section  -->
         <section class="py-5">
-            <div class="container">
-                
+            <div class="container discount">
+                <div class="discount-content">
+                    <h1 class="discount-title">65% OFF</h1>
+                    <h5 class="discount-message">OUR HOLIDAY DEALS ARE BETTER</h5>
+                    <h3 class="discount-text">ALL CATEGORIES</h3>
+                    <img class="discount-image mt-5" src="./assets/images/newYearPhoto.png" alt="image is loading">         
+                </div>
             </div>
         </section>
 
