--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container banner">
                 <div class="banner-content">
                     <h3 class="banner-title">Happy New Year</h3>
-                    <h1 class="banner-message">New Year Party <br> Celebration</h1>
+                    <h1 class="banner-message">New Year Party Celebration</h1>
                 </div>
             </div>
         </section>
@@ -28,13 +28,17 @@
         <section class="py-5">
             <div class="container discount">
                 <div class="discount-content">
-                    <h1 class="discount-title">65% OFF</h1>
-                    <h5 class="discount-message">OUR HOLIDAY DEALS ARE BETTER</h5>
-                    <h3 class="discount-text">ALL CATEGORIES</h3>
-                    <img class="discount-image mt-5" src="./assets/images/newYearPhoto.png" alt="image is loading">         
+                    <h1 class="discount-title mt-5">65% OFF</h1>
+                    <h5 class="discount-message mt-5">OUR HOLIDAY DEALS ARE BETTER</h5>
+                    <h3 class="discount-text mt-2">ALL CATEGORIES</h3>
+                    <img class="mt-5" src="./assets/images/newYearPhoto.png" alt="image is loading">         
                 </div>
             </div>
         </section>
+
+
+        <!-- welcome section  -->
+
 
     </main>
 
