--- a/index.html
+++ b/index.html
@@ -16,29 +16,47 @@
     <main>
         <!-- banner-section  -->
         <section class="py-5">
-            <div class="container banner">
-                <div class="banner-content">
-                    <h3 class="banner-title">Happy New Year</h3>
-                    <h1 class="banner-message">New Year Party Celebration</h1>
+            <div class="container">
+                <div class="banner">
+                    <div class="banner-content">
+                        <h3 class="banner-title">Happy New Year</h3>
+                        <h1 class="banner-message">New Year Party Celebration</h1>
+                    </div>
                 </div>
-            </div>
+            </div>           
         </section>
 
         <!-- discount section  -->
         <section class="py-5">
-            <div class="container discount">
-                <div class="discount-content">
-                    <h1 class="discount-title mt-5">65% OFF</h1>
-                    <h5 class="discount-message mt-5">OUR HOLIDAY DEALS ARE BETTER</h5>
-                    <h3 class="discount-text mt-2">ALL CATEGORIES</h3>
-                    <img class="mt-5" src="./assets/images/newYearPhoto.png" alt="image is loading">         
-                </div>
+            <div class="container">
+                <div class="discount">
+                    <div class="discount-content">
+                        <h1 class="discount-title mt-5">65% OFF</h1>
+                        <h5 class="discount-message mt-5">OUR HOLIDAY DEALS ARE BETTER</h5>
+                        <h3 class="discount-text mt-2">ALL CATEGORIES</h3>
+                        <img class="mt-5" src="./assets/images/newYearPhoto.png" alt="image is loading">         
+                    </div>
+                </div>               
             </div>
         </section>
 
 
         <!-- welcome section  -->
-
+        <section class="py-5">
+            <div class="container">
+                <div class="welcome-background">
+                    <div class="welcome">
+                        <div class="welcome-content mt-5">
+                            <h1 class="welcome-title mt-2">Welcome to midnight party</h1>
+                            <p class="welcome-message mt-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                            <button class="mt-2">Join Now</button>
+                        </div>
+                        <img src="./assets/images/group70.png" alt="">              
+                    </div>
+                </div>
+                
+            </div>            
+        </section>
 
     </main>
 
