--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="welcome-content mt-5">
                             <h1 class="welcome-title mt-2">Welcome to midnight party</h1>
                             <p class="welcome-message mt-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                            <button class="mt-2">Join Now</button>
+                            <button class="mt-2 px-2 py-1 btn-join">Join Now</button>
                         </div>
                         <img src="./assets/images/group70.png" alt="">              
                     </div>
@@ -57,6 +57,9 @@
                 
             </div>            
         </section>
+
+
+        <!-- join now section  -->
 
     </main>
 
