--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
 
         <!-- join now section  -->
 
+
+        <!-- coming soon section  -->
+
+
+        <!-- holiday section  -->
+
+
+
+        <!-- portfolio section  -->
+        <section>
+            <div class="container">
+                
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
