--- a/index.html
+++ b/index.html
@@ -104,6 +104,27 @@
             </div>
         </section>
 
+
+        <!-- subscribe section  -->
+        <section class="py-5">
+            <div class="container">
+                <div class="subscribe">
+                    <div class="subscribe-content">
+                        <div class="subscribe-image mt-1">
+                            <img src="./assets/images/group61.png" alt="">
+                        </div>
+                        <h3 class="subscribe-title mt-2">Subscribe Newsletter</h3>
+                        <p class="subscribe-message mt-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                        
+                        <form class="subscribe-form mt-3" action="index.html" method="get">
+                            <input class="form-input" type="email" name="email" placeholder="user@gmail.com">
+                            <input class="form-input-btn"  name="subscribe" type="submit" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
