--- a/index.html
+++ b/index.html
@@ -125,6 +125,58 @@
             </div>
         </section>
 
+
+        <!-- footer section  -->
+        <section>
+            <div class="container-fluid bg-blue-dark">
+                <div class="footer">
+                    <div class="footer-first-content">
+                        <div>
+                            <ul>
+                                <li>44, Big Building Roosevelt Street</li>
+                                <li>Beach Gardens Florida 33410</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><img src="./assets/images/call.png" alt=""> +00 123 584 124</li>
+                                <li><img src="./assets/images/website.png" alt=""> www.website.com</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="footer-second-content mt-5">
+                        <ul>
+                            <li>
+                                <img src="./assets/images/facebook.png" alt="">
+                                <img src="./assets/images/instagram.png" alt="">
+                                <img src="./assets/images/twitter.png" alt="">
+                                <img src="./assets/images/linkedin.png" alt="">
+                            </li>
+                        </ul>
+                    </div>
+                    <hr>
+
+                    <div class="footer-first-content mt-5">
+                        <div>
+                            <ul>
+                                <li>2017, All Rights Reserved.</li>                               
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>Unsubscribe</li>                              
+                            </ul>
+                        </div>
+                    </div>
+                    
+
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
