--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 
                     <div class="footer-second-content mt-5">
                         
-                        <img src="./assets/images/facebook.png" alt="facebook logo">
-                        <img src="./assets/images/instagram.png" alt="instagram logo">
-                        <img src="./assets/images/twitter.png" alt="twitter logo">
-                        <img src="./assets/images/linkedin.png" alt="linkedin logo">
+                        <img src="./assets/images/facebook.png" alt="Facebook logo">
+                        <img src="./assets/images/instagram.png" alt="Instagram logo">
+                        <img src="./assets/images/twitter.png" alt="Twitter logo">
+                        <img src="./assets/images/linkedin.png" alt="Linkedin logo">
                             
                     </div>
                     <hr>
