--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                         </div>
                         <div>
                             <ul>
-                                <li><img src="./assets/images/call.png" alt=""> +00 123 584 124</li>
-                                <li><img src="./assets/images/website.png" alt=""> www.website.com</li>
+                                <li><img src="./assets/images/Call.png" alt=""> +00 123 584 124</li>
+                                <li><img src="./assets/images/Website.png" alt=""> www.website.com</li>
                             </ul>
                         </div>
                     </div>
@@ -148,10 +148,10 @@
 
                     <div class="footer-second-content mt-5">
                         
-                        <img src="./assets/images/facebook.png" alt="Facebook logo">
-                        <img src="./assets/images/instagram.png" alt="Instagram logo">
-                        <img src="./assets/images/twitter.png" alt="Twitter logo">
-                        <img src="./assets/images/linkedin.png" alt="Linkedin logo">
+                        <img src="./assets/images/Facebook.png" alt="Facebook logo">
+                        <img src="./assets/images/Instagram.png" alt="Instagram logo">
+                        <img src="./assets/images/Twitter.png" alt="Twitter logo">
+                        <img src="./assets/images/Linkedin.png" alt="Linkedin logo">
                             
                     </div>
                     <hr>
