--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year (First Assignment)</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/images/website.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/Website.png" type="image/x-icon">
 </head>
 <body>
     <!-- <div class="container ">
