--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
 
 
         <!-- join now section  -->
-
+        <section class="py-5">
+            <div class="container">
+                <div class="join">
+                    <div class="join-content">
+                        <h3 class="join-content-title"><span class="text-danger">Place:</span> New Park Hotel</h3>
+                        <h3 class="join-content-title"><span class="text-danger">Date:</span> 31 December Night 2023</h3>
+                        <h3 class="join-content-title"><span class="text-danger">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                        <button class="join-button px-2 py-1 mt-2">Join Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- coming soon section  -->
 
