--- a/index.html
+++ b/index.html
@@ -67,14 +67,37 @@
                         <h3 class="join-content-title"><span class="text-danger">Place:</span> New Park Hotel</h3>
                         <h3 class="join-content-title"><span class="text-danger">Date:</span> 31 December Night 2023</h3>
                         <h3 class="join-content-title"><span class="text-danger">Time:</span> Evening 7.30 pm to 12.30 am</h3>
-                        <button class="join-button px-2 py-1 mt-2">Join Now</button>
+                        <button class="join-button px-2 py-1 mt-2">JOIN NOW</button>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- coming soon section  -->
+        <section class="py-5">
+            <div class="container">
+                <div class="row">
+                    <!-- coming soon first part  -->
+                    <div class="col-4 mt-3">
+                        <h5 class="coming-message text-danger">NEW BEST OFFER</h5>
+                        <h3 class="coming-title">Coming Soon</h3>
+                        <p class="coming-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    </div>
 
+                    <!-- coming soon second part  -->
+                    <div class="col-4 coming-soon-img circle">
+                        <img src="./assets/images/ellipse.png" alt="">
+                    </div>
+
+                    <!-- coming soon third part  -->
+                    <div class="col-4 px-2 mt-3">
+                        <h3 class="coming-third-title text-danger">2024</h3>
+                        <p class="coming-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                        <img src="./assets/images/group96.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- holiday section  -->
 
