--- a/index.html
+++ b/index.html
@@ -93,14 +93,25 @@
                     <div class="col-4 px-2 mt-3">
                         <h3 class="coming-third-title text-danger">2024</h3>
                         <p class="coming-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                        <img src="./assets/images/group96.png" alt="">
+                        <img class="mt-2" src="./assets/images/group96.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- holiday section  -->
+        <section class="py-5">
+            <div class="container">
+                <div class="holiday-content">
+                    <h5 class="holiday-message">WHAT IS FUNCTIONAL</h5>
+                    <h3 class="holiday-title mt-2"><span class="text-danger">Holidays</span> Sale 50%</h3>
+                    <p class="holiday-text mt-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+                </div>
 
+                
+            </div>
+        </section>
 
 
         <!-- portfolio section  -->
