--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
                     <h5 class="holiday-message">WHAT IS FUNCTIONAL</h5>
                     <h3 class="holiday-title mt-2"><span class="text-danger">Holidays</span> Sale 50%</h3>
                     <p class="holiday-text mt-2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>              
                 </div>
-
-                
+                <div class="holiday-image-section mt-5">
+                    
+                </div>               
             </div>
         </section>
 
